[gd_scene load_steps=2 format=3 uid="uid://chdvc3c7aqbsa"]

[ext_resource type="Script" path="res://addons/mood/ui_scenes/mood_ui_mood_transition_graph_node.gd" id="1_myns7"]

[node name="MoodUiMoodTransitionGraphNode" type="GraphNode"]
title = "Transition"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 0.6, 0.6, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(0.6, 1, 0.6, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_myns7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TransitionTypeSelection" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
item_count = 3
popup/item_0/text = "Property Condition"
popup/item_1/text = "Time-Based"
popup/item_1/id = 1
popup/item_2/text = "Input-Based"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ConditionTypeContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ConditionTypeOperator" type="OptionButton" parent="VBoxContainer/ConditionTypeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConditionValue" type="LineEdit" parent="VBoxContainer/ConditionTypeContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TimeTypeAwaitTime" type="LineEdit" parent="VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Time in seconds"

[connection signal="item_selected" from="VBoxContainer/TransitionTypeSelection" to="." method="_on_transition_type_selection_item_selected"]
